Layout and font

--- a/style.css
+++ b/style.css
@@ -7,10 +7,15 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
 img {
     width: 500px;
     height: 500px;
     border-radius: 250px;
+}
+
+h1 {
+    font-family: monospace;
 }
