--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 html, body {
+    width: 100%;
+    height: 100%;
     margin: 0px;
     padding: 0px;
 }
@@ -8,6 +10,8 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+
+    background: linear-gradient(to right, #e0eafc, #cfdef3);
 }
 
 img {
