--- a/style.css
+++ b/style.css
@@ -15,11 +15,12 @@ body {
 }
 
 img {
-    width: 500px;
-    height: 500px;
-    border-radius: 250px;
+    width: 300px;
+    height: 300px;
+    border-radius: 30%;
 }
 
 h1 {
     font-family: monospace;
+    font-size: 40px;
 }
