--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     justify-content: center;
     flex-direction: column;
 
-    background: linear-gradient(to right, #e0eafc, #cfdef3);
+    background: linear-gradient(to bottom, #2d2d2d, #000000);
 }
 
 img {
@@ -21,6 +21,7 @@ img {
 }
 
 h1 {
+    color: white;
     font-family: monospace;
     font-size: 40px;
 }
