--- a/style.css
+++ b/style.css
@@ -18,11 +18,12 @@ img {
     width: 300px;
     height: 300px;
     border-radius: 30%;
+    transition: all 0.3s;
 }
 
 img:hover {
     transform: scale(1.1);
-    transition: transfrom 0.3s;
+    transition: all 0.3s;
 }
 
 h1 {
