--- a/style.css
+++ b/style.css
@@ -11,19 +11,19 @@ body {
     justify-content: center;
     flex-direction: column;
 
-    background: linear-gradient(to bottom, #2d2d2d, #000000);
+    background: linear-gradient(to bottom, #808080, #000000);
 }
 
 img {
     width: 300px;
     height: 300px;
     border-radius: 30%;
-    transition: all 0.3s;
+    transition: all 0.1s;
 }
 
 img:hover {
-    transform: scale(1.1);
-    transition: all 0.3s;
+    transform: scale(1.05);
+    transition: all 0.1s;
 }
 
 h1 {
