--- a/style.css
+++ b/style.css
@@ -23,7 +23,11 @@ img {
 
 img:hover {
     transform: scale(1.05);
-    transition: all 0.1s;
+}
+
+img:active {
+    transform: scale(1.1);
+
 }
 
 h1 {
