--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     width: 100%;
     height: 100%;
     margin: 0px;
@@ -11,7 +12,7 @@ body {
     justify-content: center;
     flex-direction: column;
 
-    background: linear-gradient(to bottom, #808080, #000000);
+    background: radial-gradient(at 50vw 40vh, rgb(255, 115, 0), rgb(255, 204, 0));
 }
 
 img {
@@ -19,6 +20,7 @@ img {
     height: 300px;
     border-radius: 30%;
     transition: all 0.1s;
+    user-select: none;
 }
 
 img:hover {
@@ -31,10 +33,13 @@ img:active {
 }
 
 h1 {
+    /* opacity: 0; */
+    mix-blend-mode: difference;
+    filter: invert(0.6);
     color: white;
     text-align: center;
     font-family: monospace;
-    font-size: 40px;
+    font-size: 50px;
 }
 
 @media (max-width: 400px) {
